Your commit message here

--- a/src/components/MainHeader.css
+++ b/src/components/MainHeader.css
@@ -1,164 +1,152 @@
-.nav ul.dropdown {
+a {
+    text-decoration: none;
+}
+
+.dropdown, .sub-dropdown {
+    display: none;
+}
+
+.nav-items > .parent:hover > .dropdown,
+.nav-items > .parent:hover > .sub-dropdown {
+    display: block;
+}
+
+.nav ul {
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+}
+
+.nav ul li {
+    position: relative;
+}
+
+.nav ul li a {
+    color: #0A2863;
+    padding: 10px 15px;
+    font-size: 14px;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+.nav ul li:hover > a {
+    color: red;
+}
+
+.dropdown {
     position: absolute;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     max-width: 300px;
     width: 100%;
-  }
-
-  .nav ul.dropdown, .nav ul.subdropdown{
+    top: 100%;
+    z-index: 1;
     display: none;
-  }
-  
-.nav > ul > li:hover > ul.dropdown, nav ul.dropdown > li:hover > ul.sub-dropdown {
+}
+
+.nav-items:hover .dropdown {
     display: block;
   }
-  
-.nav ul.sub-dropdown {
+
+.sub-dropdown {
     position: absolute;
     left: 100%;
     top: 0;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-.nav ul.dropdown li {
-    width: 100%;
-    max-width: 100%;
-  }
-  
-.nav ul.dropdown li a {
-    padding: 10px 15px;
-  }
-  
-.main-header{
-    padding: 0px 100px;
-    margin-top: -20px;
-    margin-left: 20px;
-    height: 150px;
 }
 
- .nav{
-    background-color: #fff;
-    width: 100%;
-    max-width: 100%;
-    padding-top: 50px;
-    margin-left: 70px;
-  }
-
-.nav ul li{
-    padding: 0px 8px;
-    list-style-type: none;
-}
-
-.nav ul li a {
-    text-decoration: none;
-    color: #0A2863;
-    transition: color 0.3s ease;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-.nav .parent:hover {
-    color: red;
-    position: relative;
-    border-top: 2px solid red;
-    padding-top: 5px;
-}
-
-.nav ul {
-    text-decoration: none;
-    color: blue;
-    padding: 10px;
-    list-style-type: none;
-    display: flex;
-    gap: 10px;
-    flex-direction: row;
-    
-}
-
-.searchbutton {
-    max-width: 15px;
-    width: 100%;
-    height: 15px;
-    margin-left: 20px;
-}
-
-.cta-button {
-    background-color: #DA2124;
-    color: white;
-    padding: 15px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    margin-top: -15px;
-    margin-left: 20px;
-    margin-right: 10px;
-    max-width: 135px;
-    height: auto;
-}
-
-.cta-button:hover {
-    background-color: black;
-}
-
-.main-header div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 2px;
+.close-button, .logo-text {
+    display: none;
 }
 
 .hamburger {
-    display: none;
-    flex-direction: column;
-    gap: 5px;
-    cursor: pointer;
-    max-width: 40px;
-    width: 100%;
-    height: 23px;
+    display: flex;
 }
 
-.hamburger .bar {
-    background-color: #0A2863;  
-    height: 5px;
-    width: 100%;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
+.menu-toggle:checked ~ .close-button {
+    display: block;
+}
+
+.menu-toggle:checked ~ .nav .logo-text {
+    display: block;
 }
 
 .menu-toggle {
     display: none;
 }
 
-.close-button {
-    background: none;
-    border: none;
-    color: black;
-    font-size: 30px;
-    text-align: right;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin-left: auto;
-    display: none;
+.nav{
+    text-decoration: none;
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
 }
 
-.main-header.logo{
+.nav > .nav-items{
+    margin-top: 40px;
+}
+
+.nav > div {
+    margin: 0;
+    padding: 0;
+}
+
+.main-header .logo {
+    margin-right: 12px; 
+}
+
+.parent{
+    padding-right: 20px;
+    color: #0A2863;
+}
+
+.nav-items > .parent > a{
+    color: #0A2863;
+    /* padding: 10px; */
+    list-style-type: none;
+}
+
+.nav-items > .parent{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    position: relative;
+    padding-right: 20px;
+  }
+
+.nav-items >.parent ::after {
+    content: '';
+    border: solid #0A2863;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: translateY(-50%) rotate(45deg);
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transition: transform 0.3s ease;
 }
 
-.main-header .logo img{
-    width: 215px;
+.nav .parent a:hover {
+    color: red;
+    position: relative;
+    border-top: 2px solid red;
+    padding-top: 5px;
+}
+
+.logo img{
+    max-width: 210px;
+    width: 100%;
     height: auto;
     transition: width 0.3s ease;
-    padding-top: 0.1rem;
+    padding-top: 10px;
     padding-bottom: 20px;
+    padding-left: 130px;
 }
 
-.main-header .logo .logo-text{
+.nav > .logo > .logo-text{
     display: none;
     font-size: 24px;
     font-weight: bold;
@@ -166,25 +154,32 @@
     margin-left: 10px;
 }
 
-.nav .parent > a {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    padding-right: 18px;
-    margin-right: -4px;
-  }
-  
-  .nav .parent a::after {
-    content: '';
-    border: solid #0A2863;
-    border-width: 0 2px 2px 0;
-    display: inline-block;
-    padding: 3px;
-    transform: rotate(45deg);
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%) rotate(45deg);
-    transition: transform 0.3s ease;
+.searchbutton {
+    max-width: 15px;
+    width: 100%;
+    height: 15px;
+    margin-left: 20px;
+    margin-top: 45px;
+}
+
+.cta-button {
+    background-color: #DA2124;
+    padding: 15px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 25px;
+    margin-left: 5px;
+    margin-right: 10px;
+    width: 140px;
+    height: 50px;
+}
+
+.cta-button > span{
+    font-size: 16px;
+    font-weight: 700;
+    color: white;
+}
+
+.cta-button:hover {
+    background-color: black;
 }
