--- a/src/components/MainHeader.css
+++ b/src/components/MainHeader.css
@@ -33,7 +33,7 @@ a {
     color: red;
 }
 
-.dropdown {
+.parent> .dropdown {
     position: absolute;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
