--- a/src/components/MainHeader.css
+++ b/src/components/MainHeader.css
@@ -11,20 +11,19 @@
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: -20px;
   }
   
   .logo {
     font-size: 24px;
     font-weight: bold;
     margin-right: -400px;
+    margin-top: -10px;
   }
   
   .logo img{
     max-width: 210px;
     width: 100%;
     height: auto;
-    transition: width 0.3s ease;
     padding-top: 10px;
     padding-bottom: 20px;
 }
@@ -32,22 +31,27 @@
   .nav-links {
     list-style: none;
     display: flex;
-    gap: 10px;
-    margin: 0;
-    padding: 0;
+    gap: 0.5px;
     margin-top: -20px;
-    margin-right: 200px;
+    margin-left: 400px;
   }
   
   .nav-item {
     position: relative;
     cursor: pointer;
     padding: 10px 20px;
-    transition: color 0.3s ease-in-out;
+    text-decoration: none;
+    color: #0A2863;
+    font-size: 14px;
+    line-height: 35.14px;
+    font-weight: 600;
+    font-family: "Open Sans", sans-serif;
   }
   
   .nav-item:hover {
-    color: #1abc9c;
+    color: rgb(239, 24, 33);
+    position: relative;
+    border-top: 1px solid rgb(239, 24, 33);
   }
   
   .dropdown {
@@ -55,22 +59,27 @@
     top: 100%;
     left: 0;
     background-color: white;
-    color: black;
+    color: #6E6E6E;
     width: 500px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+    border-top: solid red;
     display: none;
     z-index: 1000;
     padding: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 230px;
+    width: 500px;
+    height: 400px;
+    transform: translateX(-50%);
   }
   
   .dropdown-item {
-    padding: 10px;
-    border-bottom: 0.5px solid #5cb379;
+    padding-top: 10px;
+    padding-bottom: -10px;
+    border-bottom: 0.5px solid #E7F8FC;
+    width: 70%;
     text-align: left;
     margin-left: 30px;
+    font-size: 13px;
   }
   
   .dropdown-item:last-child {
@@ -80,22 +89,26 @@
   .dropdown-item:hover {
     background-color: #f1f1f1;
   }
-  
-  .dropdown.mega {
-    width: 850px;
-    height: auto;
-    padding: 15px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
+ 
   .nav-item:hover .dropdown {
     display: block;
   }
   
+  .sub-arrow {
+    width: 12px; 
+    height: auto;
+    margin-left: 5px; 
+    transition: transform 0.3s ease-in-out;
+  }
+
   .mega{
     background-color: white;
+    width: 930px;
+    height: auto;
+    padding: 15px;
+    position: absolute;
+    left: 50%;
+    margin-left: 40px;
   }
   
   .mega-menu {
@@ -103,9 +116,11 @@
     grid-template-columns: minmax(50px, 1.5fr) 2fr minmax(100px, 2fr);
     grid-template-rows: auto 150px minmax(100px, auto);
     gap: 50px;
-    padding: 20px;
+    padding-left: 40px;
     border-radius: 15px;
-    height: 450px;
+    height: 550px;
+
+    
   }
   
   .category {
@@ -119,7 +134,7 @@
   .category h3 {
     font-size: 14px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: -5px;
     text-align: left;
     margin-left: 10px;
   }
@@ -135,6 +150,8 @@
     align-items: center;
     padding: 5px 0;
     font-size: 14px;
+    transform: scale(1);
+    transition: transform 0.3s ease-in-out;
   }
   
   .category li:hover {
@@ -152,29 +169,31 @@
   }
   
   .section-1, .section-4 {
-    height: 150px;
+    height: 200px;
     width: 260px;
     margin-bottom: -30px;
   }
   
   .section-4{
-    margin-top: -80px;
+    margin-top: -75px;
   }
   
   .section-2, .section-5 {
-    height: 180px;
+    height: 240px;
+    width: 280px;
     margin-bottom: -10px;
-    margin-left: 25px;
+    margin-left: -2px;
   }
   
   .section-5{
-    margin-top: -50px;
+    margin-top: -35px;
   }
   
   .section-3, .section-6 {
-    height: 195px;
+    height: 245px;
+    width: 290px;
     margin-bottom: -10px;
-    margin-left: -15px;
+    margin-left: -55px;
   }
   
   .section-6{
@@ -186,23 +205,132 @@
     top: 100%;
     left: 0;
     background-color: white;
-    color: black;
-    width: 500px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+    color: #0A2863;
+    line-height: 35.14px;
+    width: 270px;
+    height: 130px;
     display: none;
     z-index: 1000;
     padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    border-top: solid red;
   }
-  
-  .case-study-option {
-    padding: 10px;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
+
+  .nav-item:hover .case-study-menu {
+    display: block;
   }
   
   .case-study-option:hover {
-    background: #f4f4f4;
+    cursor: pointer;
+    color: red;
   }
+
+  .case-study-option {
+    padding: 10px;
+    text-align: left;
+  }
+
+.product-menu{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: white;
+    color: #0A2863;
+    line-height: 35.14px;
+    width: 250px;
+    height: 220px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    display: none;
+    z-index: 1000;
+    padding: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    border-top: solid red;
+}
+
+.nav-item:hover .product-menu {
+  display: block;
+}
+
+.product-option{
+  padding-top: 20px;
+}
+
+.product-option :hover{
+  cursor: pointer;
+  color: red;
+}
+
+.resource-menu{
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  color: #0A2863;
+  line-height: 35.14px;
+  width: 250px;
+  height: 220px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  display: none;
+  z-index: 1000;
+  padding: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 14px;
+  font-weight: 600;
+  border-top: solid red;
+}
+
+.nav-item:hover .resource-menu{
+  display: block;
+}
+
+.resource-option{
+  padding-top: 20px;
+}
+
+.resource-option :hover{
+  cursor: pointer;
+  color: red;
+}
+
+.nav-actions {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: -70px;
+}
+
+.searchbutton {
+  max-width: 15px;
+  width: 100%;
+  height: 15px;
+  margin-top: 30px;
+}
+
+.cta-button {
+  background-color: #DA2124;
+  padding: 15px;
+  border-radius: 5px;
+  border: none;
+  margin-top: 25px;
+  margin-left: 5px;
+  margin-right: 10px;
+  width: 140px;
+  height: 50px;
+}
+
+.cta-button > span{
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+}
+
+.cta-button:hover {
+  background-color: black;
+}
