--- a/src/components/TopHeader/TopHeader.css
+++ b/src/components/TopHeader/TopHeader.css
@@ -6,13 +6,13 @@
     width: 100%;
     padding-bottom: 10px;
     justify-content: space-between;
-    gap: 20px;
+    gap: 40px;
     height: 49px;
 }
 
 .social-media {
     fill: #ffffff;
-    margin-right: 25px;
+    margin-left: -70px;
     padding-top: 0.5rem;
     align-items: center;
 }
@@ -29,6 +29,10 @@
 
 .social-media img:hover {
     background-color: rgb(242, 57, 57);
+}
+
+.c-info{
+    margin-right: -70px;
 }
 
 .phone-button {
@@ -107,4 +111,16 @@
     position: relative;
 }
 
+@media(max-width: 1024px){
+    .topheader{
+        display: none;
+    }
+}
 
+/* @media (min-width: 1024px) {
+    .top-header .container {
+      padding-left: calc((100vw - 1024px) / 2);
+      padding-right: calc((100vw - 1024px) / 2);
+    }
+  } */
+  
